adjust navbar hide animation. acting buggy on about page: too much white space above

--- a/css/_animation.sass
+++ b/css/_animation.sass
@@ -4,6 +4,7 @@
   height: 100vh
   overflow: hidden
 
+
 .squigglemouth
   animation: 10s fall-big 14s infinite
   position: absolute
@@ -16,24 +17,28 @@
   position: absolute
   left: 50vw
   top: -200px
+  z-index: 2
 
 .orange-mindpath
   animation: 30s fall 6s infinite
   position: absolute
   top: -300px
   left: 80vw
+  z-index: 2
 
 .moutheye
   animation: 15s fall 4s infinite
   position: absolute
   top: -300px
   left: 30vw
+  z-index: 2
 
 .palmtree
   animation: 15.5s fall 5s infinite
   position: absolute
   top: -300px
   left: 5vw
+  z-index: 2
 
 .cactus
   animation: 12s fall 7s infinite
