--- a/css/_header.sass
+++ b/css/_header.sass
@@ -1,12 +1,15 @@
+body
+  // border: 1px solid white
+
 header
   height: 80px
   width: 100%
   display: flex
   align-items: center
   position: fixed
-  z-index: 20
   background: white
   transition: all 0.3s ease-in-out
+
 
 .hidden
   transform: translateY(-100%)
@@ -17,7 +20,7 @@ header
   width: 100%
   height: 100%
   align-items: center
-
+  z-index: 10
 
 
 .ddlogo
@@ -32,9 +35,10 @@ header
   justify-content: flex-end
   width: 70%
   height: 100%
-  z-index: 10
+  z-index: 11
   a
     margin-left: 10%
+    z-index: 10
     p
       font-family: "Rubik Bold"
       font-size: 1rem
