--- a/css/_sectionMain.sass
+++ b/css/_sectionMain.sass
@@ -1,7 +1,8 @@
 section
   position: relative
-  height: 90vh
+  height: 80vh
   width: 100%
+  top: 100px
 
 .splash-bg-hi
   position: absolute
@@ -96,6 +97,14 @@ section
     margin-right: 2rem
 
 //•••••• WORK •••••••
+// .project-nav
+//   margin-top: 0.8rem
+//   display: flex
+//   z-index: 19
+//   width: 100%
+//   top: 20px
+//   p
+
 .desktop-mock
   margin-bottom: 6rem
   img
