--- a/css/style.css
+++ b/css/style.css
@@ -68,7 +68,6 @@ header {
   display: flex;
   align-items: center;
   position: fixed;
-  z-index: 20;
   background: white;
   transition: all 0.3s ease-in-out; }
 
@@ -80,7 +79,8 @@ header {
   justify-content: space-between;
   width: 100%;
   height: 100%;
-  align-items: center; }
+  align-items: center;
+  z-index: 10; }
 
 .ddlogo {
   width: auto;
@@ -94,17 +94,19 @@ header {
   justify-content: flex-end;
   width: 70%;
   height: 100%;
-  z-index: 10; }
+  z-index: 11; }
   .nav a {
-    margin-left: 10%; }
+    margin-left: 10%;
+    z-index: 10; }
     .nav a p {
       font-family: "Rubik Bold";
       font-size: 1rem; }
 
 section {
   position: relative;
-  height: 90vh;
-  width: 100%; }
+  height: 80vh;
+  width: 100%;
+  top: 100px; }
 
 .splash-bg-hi {
   position: absolute;
@@ -327,25 +329,29 @@ section {
   animation: 20s fall infinite;
   position: absolute;
   left: 50vw;
-  top: -200px; }
+  top: -200px;
+  z-index: 2; }
 
 .orange-mindpath {
   animation: 30s fall 6s infinite;
   position: absolute;
   top: -300px;
-  left: 80vw; }
+  left: 80vw;
+  z-index: 2; }
 
 .moutheye {
   animation: 15s fall 4s infinite;
   position: absolute;
   top: -300px;
-  left: 30vw; }
+  left: 30vw;
+  z-index: 2; }
 
 .palmtree {
   animation: 15.5s fall 5s infinite;
   position: absolute;
   top: -300px;
-  left: 5vw; }
+  left: 5vw;
+  z-index: 2; }
 
 .cactus {
   animation: 12s fall 7s infinite;
